dropshot/tests/fail/bad_trait_endpoint14.stderr
error: endpoint `must_be_unpublished` has paths that contain a wildcard match, but is not marked 'unpublished = true'
  --> tests/fail/bad_trait_endpoint14.rs:21:5
   |
21 | /     #[endpoint {
22 | |         method = GET,
23 | |         path = "/assets/{stuff:.*}",
24 | |     }]
   | |______^
